--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/ping": "^0.4.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "onoff": "^6.0.3",
     "ping": "^0.4.4"
   }
 }
