--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --watch src -e js,ts,json --exec \"ts-node src/server.ts\"",
     "build": "tsup src/server.ts --format cjs --clean",
-    "start": "ts-node src/server.ts"
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +26,7 @@
     "@types/ping": "^0.4.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "onoff": "^6.0.3",
-    "ping": "^0.4.4"
+    "ping": "^0.4.4",
+    "raspi-i2c": "^6.2.4"
   }
 }
