--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "ping": "^0.4.4",
-    "raspi-i2c": "^6.2.4"
+    "raspi-i2c": "^6.2.4",
+    "ws": "^8.17.0"
   }
 }
