--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.9",
+    "@types/ping": "^0.4.4",
+    "@types/ws": "^8.5.10",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
@@ -22,12 +25,13 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/ping": "^0.4.4",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "net": "^1.0.2",
     "ping": "^0.4.4",
+    "raspi": "^6.0.1",
     "raspi-i2c": "^6.2.4",
+    "telnet-client": "^2.2.0",
     "ws": "^8.17.0"
   }
 }
