--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.9",
     "@types/ping": "^0.4.4",
+    "@types/ssh2": "^1.15.1",
     "@types/ws": "^8.5.10",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
@@ -26,12 +27,18 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.21.1",
     "net": "^1.0.2",
     "ping": "^0.4.4",
-    "raspi": "^6.0.1",
-    "raspi-i2c": "^6.2.4",
-    "telnet-client": "^2.2.0",
+    "pino": "^9.5.0",
+    "pino-pretty": "^11.3.0",
+    "ioredis": "^5.4.1",
+    "ssh2": "^1.16.0",
+    "telnet-client": "^2.2.1",
     "ws": "^8.17.0"
+  },
+  "optionalDependencies": {
+    "raspi": "^6.0.1",
+    "raspi-i2c": "^6.2.4"
   }
 }
